[package]
name = "lis3mdl"
version = "0.1.0"
authors = ["Ryan Rightmer <rrightmer@gmail.com>", "Natesh Narain <nnaraindev@gmail.com>"]
edition = "2018"
description = "A platform agnostic driver to interface with the LIS3MDL (3-axis magnetic sensor)"
keywords = ["embedded-hal-driver", "magnetometer", "MEMS"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/nnarain/lis3mdl"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1.0.0"
bitflags = "2.9.2"
